Mon Sep 04 02:56:57 2000  George Lebl <jirka@5z.com>

	* menu.c, foobar-widget.c, applet.c, scroll-menu.[ch], Makefile.am:
	  Make a GtkMenu subclass that handles very long menus.  When a
	  menu is larger then the screen, it makes "scroll buttons" on
	  bottom and top of menu sort of like windows does it (not quite
	  though).  It's usable, but still needs a bit of work.  Even though
	  it's much better then nothing at all.

Sun Sep 03 05:50:02 2000  George Lebl <jirka@5z.com>

	* panel.c: add text/x-moz-url as another url type for dropping.  It
	  however still doesn't accept mozilla drops for some reason, I just
	  can't figure out what's going on there.

Sun Sep 03 04:41:28 2000  George Lebl <jirka@5z.com>

	* applet-widget.h, basep-widget.c, menu.[ch], panel-types.h,
	  panel-widget.h, panel_config.c, session.c, status.c:  Add
	  "Ultra Tiny (12 pixels)" size which would be useful for PDA's
	  or real screen real estate freaks and "Ridiculous (128 pixels)"
	  which should be useful to people with bad vision I'd guess.  With
	  the new icon scaling these sizes actually look quite good.  Minor
	  cleanups and fixes as well.

Sun Sep 03 04:03:31 2000  George Lebl <jirka@5z.com>

	* button-widget.c, rgb-stuff.[ch]:  Do scaling of buttons by using
	  gdk-pixbuf scaling functions and the hyperbolic scaling code since
	  libart doesn't support it yet.  This makes non-standard (48) sized
	  panels look way cooler.

Sat Sep 02 19:19:08 2000  George Lebl <jirka@5z.com>

	* distribution.[ch], menu*.c:  Make distribution menus api cache the
	  results to avoid continual statting of version files (how often
	  does a user change from one distro to another while keeping the
	  panel running?).  Fix some remaking function to use the correct
	  distribution_info and fix a crash when distribution menus got
	  turned on on an unknown distribution system

	* *.[ch]:  make type macros be more consistent in naming, all the