@@ -2,11 +2,6 @@ Things to do on the panel, in no particular order:
 
 1.2/1.4 items
 
-* The scrollmenu still has issues with submenus.  When the scroll buttons are drawn
-  and the user hints a submenu, that menu grabs the pointer.  Then the scroll buttons
-  don't get enter/leave events.  This needs to be somehow remedied, several ugly hacks
-  spring to mind.
-
 [ Hmmmm ... needs some thought ]
 * RootApplication dentry type support.  These would be items to run other apps
   as root.  This would require pam support of course.  So for things like
