@@ -1,3 +1,7 @@
+Mon Sep 04 15:47:53 2000  George Lebl <jirka@5z.com>
+
+	* scroll-menu.c: fix the submenu / long menu interaction.
+
 Mon Sep 04 02:56:57 2000  George Lebl <jirka@5z.com>
 
 	* menu.c, foobar-widget.c, applet.c, scroll-menu.[ch], Makefile.am:
